--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "author": "Peter Širka",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^6.0.11"
+    "electron": "latest"
   },
   "dependencies": {
     "electron-settings": "latest",
-    "open": "^6.4.0"
+    "open": "latest"
   }
 }
